--- a/docs/integrations/mcp.mdx
+++ b/docs/integrations/mcp.mdx
@@ -4,87 +4,36 @@ subtitle: Connect AI applications to browser automation via Model Context Protoc
 slug: integrations/mcp
 ---
 
-The Model Context Protocol (MCP) server connects your AI applications to browser automation. This allows AI agents in tools like Claude Desktop, Cursor, or Windsurf to fill out forms, download files, research information on the web, and more.
+The Skyvern MCP server lets you connect AI applications like Claude Desktop, Cursor, and Windsurf to browser automation.
 
-Skyvern's MCP integration works in two modes:
-
-- **Skyvern Cloud** — Connect to [app.skyvern.com](https://app.skyvern.com) with your API key
-- **Local Skyvern Server** — Run everything locally with your own LLM
+Use it to fill out forms, download files, research information on the web, and more—directly from your AI assistant.
 
 ---
 
-## Step 1: Install the SDK
+## What you'll need
 
-<Note>
-Skyvern requires Python 3.11, 3.12, or 3.13.
-</Note>
+- A local Skyvern deployment, or
+- A Skyvern Cloud API key
+
+---
+
+## Option A: Setup Wizard
+
+The interactive wizard configures your MCP client and sets up credentials automatically.
 
 ```bash
 pip install skyvern
-```
-
----
-
-## Step 2: Run the setup wizard
-
-The interactive wizard configures your MCP client (Claude Desktop, Cursor, Windsurf) and sets up credentials.
-
-```bash
 skyvern init
 ```
 
 The wizard will:
-1. Ask whether to use Skyvern Cloud or local mode
-2. Configure your LLM provider (if local)
-3. Set up your MCP client configuration automatically
+1. Detect your MCP client (Claude Desktop, Cursor, or Windsurf)
+2. Ask whether to use Skyvern Cloud or local mode
+3. Configure your LLM provider and start the server (if local)
 
 ---
 
-## Step 3: Start the server (local mode only)
-
-If you chose local mode, start the Skyvern server:
-
-```bash
-skyvern run server
-```
-
-Skip this step if you're using Skyvern Cloud.
-
----
-
-## See it in action
-
-### Claude Desktop looking up Hacker News
-
-<video style={{ aspectRatio: '16 / 9', width: '100%' }} controls>
-  <source src="https://github.com/user-attachments/assets/0c10dd96-c6ff-4b99-ad99-f34a5afd04fe" type="video/mp4" />
-</video>
-
-### Cursor finding programming jobs
-
-<video style={{ aspectRatio: '16 / 9', width: '100%' }} controls>
-  <source src="https://github.com/user-attachments/assets/084c89c9-6229-4bac-adc9-6ad69b41327d" type="video/mp4" />
-</video>
-
-### Windsurf searching Form 5500 and downloading files
-
-<video style={{ aspectRatio: '16 / 9', width: '100%' }} controls>
-  <source src="https://github.com/user-attachments/assets/70cfe310-24dc-431a-adde-e72691f198a7" type="video/mp4" />
-</video>
-
----
-
-## Supported applications
-
-The `skyvern init` wizard helps configure these applications:
-
-- Claude Desktop
-- Cursor
-- Windsurf
-
----
-
-## Manual configuration
+## Option B: Manual Configuration
 
 For other MCP-enabled applications, add this to your MCP configuration file:
 
@@ -109,6 +58,28 @@ For other MCP-enabled applications, add this to your MCP configuration file:
 ```
 
 For local mode, set `SKYVERN_BASE_URL` to `http://localhost:8000`. Find your local `SKYVERN_API_KEY` in the `.env` file after running `skyvern init`.
+
+---
+
+## See it in action
+
+### Claude Desktop looking up Hacker News
+
+<video style={{ aspectRatio: '16 / 9', width: '100%' }} controls>
+  <source src="https://github.com/user-attachments/assets/0c10dd96-c6ff-4b99-ad99-f34a5afd04fe" type="video/mp4" />
+</video>
+
+### Cursor finding programming jobs
+
+<video style={{ aspectRatio: '16 / 9', width: '100%' }} controls>
+  <source src="https://github.com/user-attachments/assets/084c89c9-6229-4bac-adc9-6ad69b41327d" type="video/mp4" />
+</video>
+
+### Windsurf searching Form 5500 and downloading files
+
+<video style={{ aspectRatio: '16 / 9', width: '100%' }} controls>
+  <source src="https://github.com/user-attachments/assets/70cfe310-24dc-431a-adde-e72691f198a7" type="video/mp4" />
+</video>
 
 ---
 
