--- a/docs/self-hosted/overview.mdx
+++ b/docs/self-hosted/overview.mdx
@@ -4,15 +4,7 @@ subtitle: Run Skyvern on your own infrastructure
 slug: self-hosted/overview
 ---
 
-Self-hosted Skyvern runs entirely on your infrastructure—your servers, your browsers, your LLM API keys. This guide helps you decide if self-hosting fits your needs and which deployment method to choose.
-
-## When to self-host
-
-- **Data privacy** — Browser sessions and extracted data never leave your network
-- **Compliance requirements** — Meet SOC 2, HIPAA, or internal security policies that prohibit third-party data processing
-- **Air-gapped environments** — Run in isolated networks using local LLMs via Ollama
-- **High volume** — Avoid per-task pricing when running thousands of automations
-- **Custom models** — Use fine-tuned or proprietary LLMs through any OpenAI-compatible endpoint
+Self-hosted Skyvern runs entirely on your infrastructure: your servers, your browsers, your LLM API keys. This guide helps you decide if self-hosting fits your needs and which deployment method to choose.
 
 ## Architecture
 
@@ -40,18 +32,27 @@ flowchart LR
 | **Skyvern API Server** | Orchestrates tasks, processes LLM responses, stores results |
 | **PostgreSQL** | Stores task history, workflows, credentials, and organization data |
 | **Browser Container** | Playwright-managed Chromium that executes the actual web automation |
-| **LLM Provider** | Analyzes screenshots and determines actions—you provide the API key (OpenAI, Anthropic, Azure, or local via Ollama) |
+| **LLM Provider** | Analyzes screenshots and determines actions. You provide the API key (OpenAI, Anthropic, Azure, or local via Ollama) |
 
-The browser and LLM are separate services. Skyvern captures screenshots from the browser, sends them to the LLM for analysis, receives action instructions, and executes them in the browser. This loop continues until the task completes.
+### How a task executes
+
+Skyvern runs a perception-action loop for each task step:
+
+1. **Screenshot**: The browser captures the current page state
+2. **Analyze**: The screenshot is sent to your LLM, which identifies interactive elements and decides the next action
+3. **Execute**: Skyvern performs the action in the browser (click, type, scroll, extract data)
+4. **Repeat**: Steps 1-3 loop until the task goal is met or the step limit (`MAX_STEPS_PER_RUN`) is reached
+
+This loop is why LLM choice and browser configuration are the two most impactful self-hosting decisions. They affect every task step.
 
 ## What changes from Cloud
 
 | You gain | You manage |
 |----------|------------|
-| Full data control—browser sessions and results stay on your network | Infrastructure—servers, scaling, uptime |
-| Any LLM provider, including local models via Ollama | LLM API costs—pay your provider directly |
-| No per-task pricing | Proxies—Cloud includes managed residential proxies; self-hosted requires your own |
-| Full access to browser configuration and extensions | Software updates—pull new Docker images manually |
+| Full data control: browser sessions and results stay on your network | Infrastructure: servers, scaling, uptime |
+| Any LLM provider, including local models via Ollama | LLM API costs: pay your provider directly |
+| No per-task pricing | Proxies: bring your own provider |
+| Full access to browser configuration and extensions | Software updates: pull new Docker images manually |
 | Deploy in air-gapped or restricted networks | Database backups and maintenance |
 
 <Note>
@@ -85,9 +86,8 @@ PostgreSQL 14+ is included in the Docker Compose setup. If you prefer an externa
 |--------|----------|
 | **Docker Compose** | Getting started, small teams, single-server deployments |
 | **Kubernetes** | Production at scale, teams with existing K8s infrastructure, high availability requirements |
-| **Local (no containers)** | Development, debugging, testing prompts before deploying |
 
-Most teams start with Docker Compose—it's the fastest path to a working deployment. Move to Kubernetes when you need horizontal scaling or want to integrate with existing orchestration infrastructure.
+Most teams start with Docker Compose. It's the fastest path to a working deployment. Move to Kubernetes when you need horizontal scaling or want to integrate with existing orchestration infrastructure.
 
 ## Next steps
 
