--- a/docs/cloud/your-first-task.mdx
+++ b/docs/cloud/your-first-task.mdx
@@ -4,7 +4,7 @@ slug: cloud/your-first-task
 subtitle: Run a browser automation from start to finish
 ---
 
-Let's run a real automation. You'll tell Skyvern to visit a website, extract data, and return it as JSON — then watch the entire thing happen live.
+Let's run a real automation. You'll tell Skyvern to visit a website, extract data, and return it as JSON. Then watch the entire thing happen live.
 
 ## Step 1: Write your prompt
 
@@ -12,7 +12,7 @@ Open [app.skyvern.com](https://app.skyvern.com) and you'll land on the **Discove
 
 <img src="/images/cloud/skyvern-cloud-discover.png" alt="Discover page with a prompt entered" />
 
-The Discover page has a single input field — type your instructions and include the target URL in the same prompt. For this example, enter:
+The Discover page has a single input field. Type your instructions and include the target URL in the same prompt. For this example, enter:
 
 ```
 Get the title of the #1 post on the front page for https://news.ycombinator.com
@@ -20,7 +20,7 @@ Get the title of the #1 post on the front page for https://news.ycombinator.com
 
 That's it. Skyvern parses the URL and figures out how to navigate the page and extract the data.
 
-Below the input, you'll see quick-action chips like "Add a product to cart" and "What's the top post on hackernews" — click any of these to try a pre-filled example instead.
+Below the input, you'll see quick-action chips like "Add a product to cart" and "What's the top post on hackernews". Click any of these to try a pre-filled example instead.
 
 <Tip>
 The more specific your prompt, the better. "Get the title of the #1 post" works much better than "get some data." Include the exact fields you want, what success looks like, and any constraints.
@@ -32,12 +32,13 @@ Next to your prompt, you'll see an engine selector. Click it to switch engines:
 
 | Engine | When to use it |
 |--------|---------------|
-| **Skyvern 1.0** | Tasks with a simple, single goal — filling a form, searching for information on Google, reading content from a page |
-| **Skyvern 2.0** | The default engine. Handles complex, multi-step tasks and scores state-of-the-art 85.85% on the WebVoyager benchmark |
+| **Skyvern 1.0** | Tasks with a simple, single goal: filling a form, searching for information on Google, reading content from a page |
+| **Skyvern 2.0** | Complex, multi-step tasks. Scores state-of-the-art 85.85% on the WebVoyager benchmark |
+| **Skyvern 2.0 with code** | The default engine. Same capabilities as Skyvern 2.0, plus auto-generates reusable code and a workflow from the run |
 
-For this example, the default **Skyvern 2.0** works.
+For this example, keep the default **Skyvern 2.0 with code** selected.
 
-Click the **send button** (arrow icon to the right of the input). Skyvern spins up a cloud browser and starts working.
+Click the **send button** (arrow icon to the right of the input). Skyvern generates a workflow from your prompt and opens it in the workflow editor. Click **Run** in the top right, confirm the parameters, then click **Run workflow** to start execution.
 
 <Accordion title="Optional: Advanced settings">
 Click the **gear icon** next to send to configure additional options before running:
@@ -69,12 +70,6 @@ On the left, a **live browser view**. You'll see pages load, elements highlight,
 
 On the right, the **agent log**. A running stream of the AI's Thoughts, Decisions, and block executions. If something goes wrong, this is where you'll figure out why.
 
-### Take control at any time
-
-If you see something unexpected or would like to intervene, click **"Take Control"** to drop into the browser session yourself. You can navigate, click, type, whatever.  When you're done, release control and the AI picks up where you left off.
-
-This is useful for CAPTCHAs, unusual login flows, or any situation where you want to guide the AI past a tricky spot.
-
 ## Step 4: Review the results
 
 When the task finishes, the status badge flips to **completed** and the extracted data appears at the top of the page.
@@ -86,31 +81,33 @@ When the task finishes, the status badge flips to **completed** and the extracte
 The **Extracted Information** block shows your results as structured JSON:
 
 ```json
-{
-  "top_post_title": "Don't rent the cloud, own instead"
-}
+[
+  {
+    "top_post_title": "Don't rent the cloud, own instead"
+  }
+]
 ```
 
-The agent log on the right confirms what happened — you'll see a final Thought summarizing the result and a green **"Run Completed"** notification.
+The agent log on the right confirms what happened. You'll see a final Thought summarizing the result.
 
 ### Tabs
 
 Below the extracted data, five tabs give you different views of the run:
 
-- **Overview** — The default view. Shows extracted data and the agent log with every Thought and Decision.
-- **Output** — The raw JSON output from the run.
-- **Parameters** — The exact configuration that was submitted (URL, prompt, engine, schema). Useful for reproducing or tweaking the run.
-- **Recording** — Full video replay of the browser session, start to finish.
-- **Code** — Auto-generated code snippets to reproduce this task via the API or SDK.
+- **Overview**: The default view. Shows extracted data and the agent log with every Thought and Decision.
+- **Output**: The raw JSON output from the run.
+- **Parameters**: The exact configuration that was submitted (URL, prompt, engine, schema). Useful for reproducing or tweaking the run.
+- **Recording**: Full video replay of the browser session, start to finish.
+- **Code**: Auto-generated code snippets to reproduce this task via the API or SDK.
 
 ## Try something bigger
 
 Now that you've seen the basic flow, here are a few ideas to try next:
 
-- **Fill a form** — Point Skyvern at a contact form and tell it what to enter in each field
-- **Compare prices** — Extract product names and prices from an e-commerce page using a data schema
-- **Navigate a flow** — Use the Advanced engine to walk through a multi-page checkout or signup process
-- **Use an Agent template** — Check the **Agents** section in the sidebar for pre-built automations you can run instantly
+- **Fill a form**: Point Skyvern at a contact form and tell it what to enter in each field
+- **Compare prices**: Extract product names and prices from an e-commerce page using a data schema
+- **Navigate a flow**: Use the Advanced engine to walk through a multi-page checkout or signup process
+- **Use an Agent template**: Check the **Agents** section in the sidebar for pre-built automations you can run instantly
 
 ---
 
@@ -118,17 +115,17 @@ Now that you've seen the basic flow, here are a few ideas to try next:
 
 <CardGroup cols={2}>
   <Card
-    title="Build a Workflow"
-    icon="diagram-project"
-    href="/workflows/manage-workflows"
+    title="Run a Task via API"
+    icon="code"
+    href="/running-automations/run-a-task"
   >
-    Chain multiple steps into reusable, multi-step automations
+    Trigger automations programmatically with the Skyvern API
   </Card>
   <Card
-    title="Store Credentials"
-    icon="key"
-    href="/credentials/introduction"
+    title="Core Concepts"
+    icon="book"
+    href="/getting-started/core-concepts"
   >
-    Save logins so Skyvern can authenticate on your behalf
+    Understand tasks, workflows, and other building blocks
   </Card>
 </CardGroup>
